--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
       <artifactId>wiremock</artifactId>
-      <version>1.57</version>
+      <version>2.0.10-beta</version>
       <scope>test</scope>
     </dependency>
     <dependency>
