--- a/pom.xml
+++ b/pom.xml
@@ -181,16 +181,16 @@
 
   <repositories>
     <repository>
-      <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
-    </repository>
-    <repository>
       <id>github-maven</id>
-      <url>https://raw.github.com/justice3120/stf-java-client/hoge-mod-branch/</url>
+      <url>https://raw.github.com/justice3120/stf-java-client/branch-ver1.0.3/</url>
       <snapshots>
         <enabled>true</enabled>
         <updatePolicy>always</updatePolicy>
       </snapshots>
+    </repository>
+    <repository>
+      <id>repo.jenkins-ci.org</id>
+      <url>http://repo.jenkins-ci.org/public/</url>
     </repository>
   </repositories>
 
