--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.609.3</version>
+    <version>2.7</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -27,6 +27,10 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+
+  <properties>
+    <jenkins.version>1.609.3</jenkins.version>
+  </properties>
 
   <dependencies>
     <dependency>
