--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,9 @@
 
   <artifactId>open-stf</artifactId>
   <packaging>hpi</packaging>
-  <version>1.4.0</version>
+  <version>1.0.0</version>
   <name>Open STF Plugin</name>
+  <url>https://wiki.jenkins-ci.org/display/JENKINS/Open+STF+Plugin</url>
   <developers>
     <developer>
       <id>justice3120</id>
@@ -155,6 +156,12 @@
         </testResource>
     </testResources>
   </build>
+
+  <scm>
+    <connection>scm:git:git://github.com/jenkinsci/open-stf-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/open-stf-plugin.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
   <reporting>
     <plugins>
