--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <artifactId>open-stf</artifactId>
   <packaging>hpi</packaging>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <name>Open STF Plugin</name>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/Open+STF+Plugin</url>
   <developers>
@@ -160,7 +160,7 @@
   <scm>
     <connection>scm:git:git://github.com/jenkinsci/open-stf-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/open-stf-plugin.git</developerConnection>
-    <tag>HEAD</tag>
+    <url>https://github.com/jenkinsci/open-stf-plugin</url>
   </scm>
 
   <reporting>
