--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <artifactId>open-stf</artifactId>
   <packaging>hpi</packaging>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <name>Open STF Plugin</name>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/Open+STF+Plugin</url>
   <developers>
@@ -161,7 +161,7 @@
     <connection>scm:git:git://github.com/jenkinsci/open-stf-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/open-stf-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/open-stf-plugin</url>
-    <tag>HEAD</tag>
+    <tag>open-stf-1.0.1</tag>
   </scm>
 
   <reporting>
